home-automation/mosquitto/mosquitto.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: mqtt.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  name: ws
